tests/failing/fib10.tail
let v12:[int]1 = prArrI(power(fn v8:[int]1 => snoc{[int],[0]}(rav(v8),reduce{[int],[0]}(addi,0,takeV{[int],[2]}(~2,rav(v8)))),10,[0,1])) in
0.00
